; ModuleID = '/home/carl/AnghaBench/php-src/ext/standard/extr_html.c_determine_entity_table.c'
source_filename = "/home/carl/AnghaBench/php-src/ext/standard/extr_html.c_determine_entity_table.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i32, i32* }

@ENT_HTML_DOC_XML1 = common dso_local global i32 0, align 4
@ENT_HTML_DOC_HTML5 = common dso_local global i32 0, align 4
@entity_ms_table_html5 = common dso_local global i32 0, align 4
@entity_ms_table_html4 = common dso_local global i32 0, align 4
@ENT_HTML_DOC_HTML401 = common dso_local global i32 0, align 4
@stage3_table_be_noapos_00000 = common dso_local global i32 0, align 4
@stage3_table_be_apos_00000 = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast ({ i64, i32* } (i32, i32)* @determine_entity_table to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal { i64, i32* } @determine_entity_table(i32 %0, i32 %1) #0 {
  %3 = alloca %struct.TYPE_3__, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  %6 = bitcast %struct.TYPE_3__* %3 to i8*
  call void @llvm.memset.p0i8.i64(i8* align 8 %6, i8 0, i64 16, i1 false)
  %7 = load i32, i32* %5, align 4
  %8 = load i32, i32* @ENT_HTML_DOC_XML1, align 4
  %9 = icmp eq i32 %7, %8
  br i1 %9, label %10, label %13

10:                                               ; preds = %2
  %11 = load i32, i32* %4, align 4
  %12 = icmp ne i32 %11, 0
  br label %13

13:                                               ; preds = %10, %2
  %14 = phi i1 [ false, %2 ], [ %12, %10 ]
  %15 = xor i1 %14, true
  %16 = zext i1 %15 to i32
  %17 = call i32 @assert(i32 %16)
  %18 = load i32, i32* %4, align 4
  %19 = icmp ne i32 %18, 0
  br i1 %19, label %20, label %31

20:                                               ; preds = %13
  %21 = load i32, i32* %5, align 4
  %22 = load i32, i32* @ENT_HTML_DOC_HTML5, align 4
  %23 = icmp eq i32 %21, %22
  br i1 %23, label %24, label %26

24:                                               ; preds = %20
  %25 = load i32, i32* @entity_ms_table_html5, align 4
  br label %28

26:                                               ; preds = %20
  %27 = load i32, i32* @entity_ms_table_html4, align 4
  br label %28

28:                                               ; preds = %26, %24
  %29 = phi i32 [ %25, %24 ], [ %27, %26 ]
  %30 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %3, i32 0, i32 1
  store i32 %29, i32* %30, align 4
  br label %42

31:                                               ; preds = %13
  %32 = load i32, i32* %5, align 4
  %33 = load i32, i32* @ENT_HTML_DOC_HTML401, align 4
  %34 = icmp eq i32 %32, %33
  br i1 %34, label %35, label %37

35:                                               ; preds = %31
  %36 = load i32, i32* @stage3_table_be_noapos_00000, align 4
  br label %39

37:                                               ; preds = %31
  %38 = load i32, i32* @stage3_table_be_apos_00000, align 4
  br label %39

39:                                               ; preds = %37, %35
  %40 = phi i32 [ %36, %35 ], [ %38, %37 ]
  %41 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %3, i32 0, i32 0
  store i32 %40, i32* %41, align 8
  br label %42

42:                                               ; preds = %39, %28
  %43 = bitcast %struct.TYPE_3__* %3 to { i64, i32* }*
  %44 = load { i64, i32* }, { i64, i32* }* %43, align 8
  ret { i64, i32* } %44
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memset.p0i8.i64(i8* nocapture writeonly, i8, i64, i1 immarg) #1

declare dso_local i32 @assert(i32) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
